--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "directory-tree": "^2.2.9",
     "electron-store": "^8.0.0",
     "gsap": "^3.7.0",
+    "prismjs": "^1.24.0",
     "register-service-worker": "^1.7.1",
     "simple-git": "^2.40.0",
     "vue": "^2.6.11",
@@ -52,6 +53,7 @@
     "typescript": "~4.1.5",
     "vue-cli-plugin-electron-builder": "~2.0.0",
     "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-prism-editor": "^1.2.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   }
