--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@kugatsu/vuenotification": "^1.1.4",
     "core-js": "^3.6.5",
+    "diff2html": "^3.4.5",
     "directory-tree": "^2.2.9",
     "electron-store": "^8.0.0",
     "gsap": "^3.7.0",
@@ -22,10 +23,13 @@
     "register-service-worker": "^1.7.1",
     "simple-git": "^2.40.0",
     "vue": "^2.6.11",
+    "vue-code-highlight": "^0.7.8",
     "vue-moment": "^4.1.0",
+    "vue-prism-component": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-electron-store": "^1.4.5"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
